@@ -423,8 +423,6 @@ cp -r <i>[dspace]</i>/webapps/oai <i>[tomcat]</i>/webapps</PRE>
 
     <p>Obviously, you should choose execution times which are most useful to you, and you should ensure that the <code>-report-</code> scripts run a short while after the analysis scripts to give them time to complete (a run of around 8 months worth of logs can take around 25 seconds to complete); the resulting reports will let you know how long analysis took and you can adjust your cron times accordingly.</p>
 
-	<p>Note that <a href="http://www.perl.com/download.csp">Perl</a> needs to be installed in order to run the statistical reports.</p>
-
     <P>For information on customising the output of this see <A HREF="configure.html#statistics">configuring system statistical reports</A>.</P>
 
 	<h3>Multilingual Installation</h3>
